NEXT-2330 - Implement Salutation in Forms

--- a/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
@@ -24,8 +24,8 @@
                                     <div class="sw-user-card__metadata">
 
                                         {% block sw_user_card_metadata_user_name %}
-                                            <div v-if="userName" class="sw-user-card__metadata-user-name">
-                                                {{ userName }}
+                                            <div v-if="user" class="sw-user-card__metadata-user-name">
+                                                {{ user | salutation }}
                                             </div>
                                         {% endblock %}
 
