--- a/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
@@ -35,7 +35,7 @@
                                         :class="addressButtonClasses(address.id)"
                                         @click="onExistingAddressSelected(address)">
                                     {{ address.company }} <br>
-                                    {{ address.salutation}} {{ address.firstName }} {{ address.lastName }}<br>
+                                    {{ address | salutation }}<br>
                                     {{ address.street }} <br>
                                     {{ address.zipcode }} {{ address.city }}<br>
                                     {{ address.country.name }}<br>
