--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -42,7 +42,8 @@
                 {% block sw_customer_detail_content_tabs %}
                     <sw-tabs class="sw-customer-detail-page__tabs">
                         {% block sw_customer_detail_content_tab_general %}
-                            <sw-tabs-item :route="{ name: 'sw.customer.detail.base', params: { id: $route.params.id } }"
+                            <sw-tabs-item class="sw-customer-detail__tab-general"
+                                          :route="{ name: 'sw.customer.detail.base', params: { id: $route.params.id } }"
                                           :title="$tc('sw-customer.detail.tabGeneral')">
                                 {{ $tc('sw-customer.detail.tabGeneral') }}
                             </sw-tabs-item>
@@ -57,7 +58,8 @@
                         {% endblock %}
 
                         {% block sw_customer_detail_content_tab_order %}
-                            <sw-tabs-item :route="{ name: 'sw.customer.detail.order', params: { id: $route.params.id } }"
+                            <sw-tabs-item class="sw-customer-detail__tab-order"
+                                          :route="{ name: 'sw.customer.detail.order', params: { id: $route.params.id } }"
                                           :title="$tc('sw-customer.detailBase.labelOrderCard')">
                                 {{ $tc('sw-customer.detailBase.labelOrderCard') }}
                             </sw-tabs-item>
