--- a/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
@@ -11,6 +11,8 @@
                            :store="tagStore"
                            :possibleMinPosition="-1"
                            :highlightSearchTerm="true"
+                           :disabled="disabled"
+                           :size="size"
                            @sw-select-search-term-change="onSearchTermChange"
                            @sw-select-on-arrow-down="onArrowDown"
                            @sw-select-list-applied="onSearchResultChange"
