--- a/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.scss
+++ b/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.scss
@@ -3,6 +3,14 @@
 $sw-select-color-border: $color-steam-cloud;
 $sw-select-color-search-highlight: $color-shopware-blue;
 .sw-tag-field {
+
+    .sw-select.is--disabled.sw-select--multi.is--searchable {
+        .sw-select__inner {
+            border: none;
+            background: transparent;
+        }
+    }
+
     .sw-select__selection-item-holder {
         .sw-label {
             background: transparent;
