--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -12,7 +12,7 @@
                     <sw-button v-if="!customerEditMode && !createMode"
                                class="sw-customer-detail__open-edit-mode-action"
                                variant="primary"
-                               :disabled="customer.isLoading || isOrderPage"
+                               :disabled="isLoading || isOrderPage"
                                @click.prevent="onActivateCustomerEditMode">
                         {{ $tc('sw-customer.detail.buttonEdit') }}
                     </sw-button>
@@ -20,14 +20,14 @@
 
                 <span v-else>
                     {% block sw_customer_detail_actions_cancel %}
-                        <sw-button :disabled="customer.isLoading" @click="onAbortButtonClick">
+                        <sw-button :disabled="isLoading" @click="onAbortButtonClick">
                             {{ $tc('sw-customer.detail.buttonCancel') }}
                         </sw-button>
                     {% endblock %}
 
                     {% block sw_customer_detail_actions_save %}
                         <sw-button class="sw-customer-detail__save-action"
-                                   :disabled="customer.isLoading"
+                                   :disabled="isLoading"
                                    variant="primary"
                                    @click.prevent="onSave">
                             {{ $tc('sw-customer.detail.buttonSave') }}
@@ -81,6 +81,7 @@
                                  :customerAttributeSets="customerAttributeSets"
                                  :language="language"
                                  :isLoading="isLoading"
+                                 v-if="!isLoading"
                                  @activateCustomerEditMode="onActivateCustomerEditMode">
                     </router-view>
                 {% endblock %}
