NEXT-1863 - E2E categories create

--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
@@ -72,6 +72,7 @@
                             <sw-context-button :disabled="isDisabled">
                             {% block sw_tree_items_actions_before %}
                                 <sw-context-menu-item
+                                    class="sw-tree-item__before-action"
                                     v-tooltip="toolTip"
                                     @click="addElement(item, 'before');">
                                     {{ $tc(`${translationContext}.general.actions.createBefore`) }}
@@ -79,6 +80,7 @@
                             {% endblock %}
                             {% block sw_tree_items_actions_after %}
                                 <sw-context-menu-item
+                                    class="sw-tree-item__after-action"
                                     v-tooltip="toolTip"
                                     @click="addElement(item, 'after');">
                                     {{ $tc(`${translationContext}.general.actions.createAfter`) }}
@@ -86,6 +88,7 @@
                             {% endblock %}
                             {% block sw_tree_items_actions_sub %}
                                 <sw-context-menu-item
+                                    class="sw-tree-item__sub-action"
                                     v-tooltip="toolTip"
                                     @click="addSubElement(item); openTreeItem(true)">
                                     {{ $tc(`${translationContext}.general.actions.createSub`) }}
