NTR - Fix grid sort appearance, fix borders, fix viewport listener

--- a/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
+++ b/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
@@ -30,12 +30,21 @@
         margin: 0;
         font-size: 14px;
         color: $color-gutenberg;
-        border-left: 1px solid $color-steam-cloud;
+        border-right: 1px solid $color-steam-cloud;
         overflow: hidden;
         background-color: $color-white;
 
         &:last-child {
-            border-left: 0 none;
+            border-right: 0 none;
+        }
+    }
+
+    &.sw-data-grid--actions .sw-data-grid__cell {
+        border-right: 1px solid $color-steam-cloud;
+
+        &:last-child,
+        &:nth-last-child(2) {
+            border-right: 0 none;
         }
     }
 
@@ -167,12 +176,8 @@
         }
     }
 
-    .sw-data-grid__cell--property {
+    .sw-data-grid__cell--sortable {
         cursor: pointer;
-
-        .sw-data-grid__sort-indicator {
-            margin-left: auto;
-        }
 
         &:hover {
             background-color: $color-light-gray;
@@ -180,6 +185,12 @@
             .sw-data-grid__action-edit-column .sw-icon {
                 color: $color-gutenberg;
             }
+        }
+    }
+
+    .sw-data-grid__cell--property {
+        .sw-data-grid__sort-indicator {
+            margin-left: auto;
         }
 
         &.is--column-resizing {
